[package]
name = "racetrack-proc-macro"
version = "0.0.1"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"
repository = "https://github.com/wingertge/racetrack"

[lib]
proc-macro = true

[features]
# Blank feature for testing closures
nightly = []

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"

[dev-dependencies]
lazy_static = "1"
racetrack = { path = "../racetrack", version = "0.0.1" }