[package]
name = "racetrack-proc-macro"
version = "0.0.1"
authors = ["Genna Wingert <wingertge@gmail.com>"]
edition = "2018"

description = "Proc macros support for the racetrack crate"

repository = "https://github.com/wingertge/racetrack"
license = "Apache-2.0"

[lib]
proc-macro = true

[features]
# Blank feature for testing closures
nightly = []

[dependencies]
proc-macro2 = "1"
syn = { version = "1", features = ["full", "extra-traits"] }
quote = "1"